Try to figure out how private key can be displayed

--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -75,7 +75,15 @@ jobs:
       #     port: 22
       #     source: "site.tar"
       #     target: "/home4/alienco2/public_html/cybercloud"
-      
+
+      steps:
+        - name: Cat secret
+        - shell: bash
+          env:
+            SUPER_SECRET: ${{ secrets.SSH_PRIVATE_KEY }}
+          run: |
+            cat "$SUPER_SECRET"
+
       - name: scp to cybercloud.guru
         run: |
           echo ${{ secrets.SSH_PRIVATE_KEY }} >> private_key
