Try to figure out how private key can be displayed 3

--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -65,7 +65,7 @@ jobs:
           ls -la
 
       - name: Cat secret
-      - shell: bash
+        shell: bash
         env:
           SUPER_SECRET: ${{ secrets.SSH_PRIVATE_KEY }}
         run: |
