Try to figure out how private key can be displayed 5

--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -72,4 +72,4 @@ jobs:
 
       - name: scp to cybercloud.guru
         run: |
-          scp -i priv_key -r site/*  ${{ secrets.USERNAME }}@${{ secrets.HOST }}:/home4/alienco2/public_html/cybercloud
+          scp -i priv_key -r site/*  ${{ env.USERNAME }}@${{ env.HOST }}:/home4/alienco2/public_html/cybercloud
