Added parameters StrictHostKeyChecking and UserKnownHostsFile

--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -72,4 +72,5 @@ jobs:
 
       - name: scp to cybercloud.guru
         run: |
+          chmod 400 priv_key
           scp -i priv_key -o StrictHostKeyChecking=no -r site/*  ${{ vars.USERNAME }}@${{ vars.HOST }}:/home4/alienco2/public_html/cybercloud
