--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -60,6 +60,7 @@ jobs:
           PUB_BASE64: ${{ secrets.SSH_PUBLIC_KEY }}
         run: |
           echo $CERTIFICATE_BASE64 | base64 --decode > priv_key
+          mkdir -p ~/.ssh
           echo $PUB_BASE64 | base64 --decode >> ~/.ssh/authorized_keys
       - name: scp to cybercloud.guru
         run: |
